--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
     "node-neat": "^1.7.2",
     "postcss-flexibility": "^1.1.0",
     "postcss-object-fit-images": "^1.1.2"
-  }
+  },
+  "version": "0.1.0"
 }
