--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "broccoli-stew": "^1.4.0",
     "broccoli-uglify-sourcemap": "^1.5.1",
     "loader.js": "^4.1.0",
+    "lodash.merge": "^4.6.0",
     "main-bower-files": "^2.13.1",
+    "modernizr": "^3.3.1",
     "node-bourbon": "^4.2.8",
     "node-neat": "^1.7.2",
     "postcss-flexibility": "^1.1.0",
