--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "main": "lib/dtk-app.js",
   "dependencies": {
     "autoprefixer": "^6.7.2",
-    "broccoli-babel-transpiler": "^5.6.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-es2015-block-scoping": "^6.4.0",
+    "babel-plugin-transform-es2015-classes": "^6.9.0",
+    "babel-plugin-transform-es2015-modules-amd": "^6.4.3",
+    "babel-plugin-transform-strict-mode": "^6.3.13",
+    "babel-template": "^6.22.0",
+    "broccoli-babel-transpiler": "~6.0.0-alpha.3",
     "broccoli-concat": "^3.1.1",
     "broccoli-funnel": "^1.1.0",
     "broccoli-merge-trees": "^1.2.1",
     "broccoli-postcss": "^3.2.1",
     "broccoli-sass": "^0.7.0",
+    "broccoli-source": "^1.1.0",
     "broccoli-stew": "^1.4.0",
     "broccoli-uglify-sourcemap": "^1.5.1",
     "loader.js": "^4.1.0",
@@ -17,7 +24,18 @@
     "node-bourbon": "^4.2.8",
     "node-neat": "^1.7.2",
     "postcss-flexibility": "^1.1.0",
-    "postcss-object-fit-images": "^1.1.2"
+    "postcss-object-fit-images": "^1.1.2",
+    "promise-polyfill": "^6.0.2"
+  },
+  "devDependencies": {
+    "broccoli-test-helpers": "0.0.8",
+    "chai": "^3.5.0",
+    "mkdirp": "^0.5.1",
+    "mocha": "^3.0.2"
+  },
+  "scripts": {
+    "test": "node_modules/mocha/bin/mocha test",
+    "test:debug": "node_modules/mocha/bin/mocha debug test"
   },
   "version": "0.2.4"
 }
