--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "dependencies": {
     "autoprefixer": "^6.7.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
-    "babel-plugin-transform-es2015-block-scoping": "^6.4.0",
-    "babel-plugin-transform-es2015-classes": "^6.9.0",
     "babel-plugin-transform-es2015-modules-amd": "^6.4.3",
     "babel-plugin-transform-strict-mode": "^6.3.13",
+    "babel-preset-es2015": "^6.22.0",
     "babel-template": "^6.22.0",
     "broccoli-babel-transpiler": "~6.0.0-alpha.3",
     "broccoli-concat": "^3.1.1",
