--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "broccoli-babel-transpiler": "~6.0.0-alpha.3",
     "broccoli-concat": "^3.1.1",
     "broccoli-funnel": "^1.1.0",
+    "broccoli-lint-eslint": "^3.2.0",
     "broccoli-merge-trees": "^1.2.1",
     "broccoli-postcss": "^3.2.1",
     "broccoli-sass": "^0.7.0",
