require node version 6

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.2"
   },
+  "engines": {
+    "node" : ">=6.0.0"
+  },
   "scripts": {
     "test": "node_modules/mocha/bin/mocha test",
     "test:debug": "node_modules/mocha/bin/mocha debug test"
