--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "node-neat": "^1.7.2",
     "postcss-flexibility": "^1.1.0",
     "postcss-object-fit-images": "^1.1.2",
-    "promise-polyfill": "^6.0.2"
+    "promise-polyfill": "^6.0.2",
+    "shelljs": "^0.7.6"
   },
   "devDependencies": {
     "broccoli-test-helpers": "0.0.8",
@@ -34,7 +35,7 @@
     "mocha": "^3.0.2"
   },
   "engines": {
-    "node" : ">=6.0.0"
+    "node": ">=6.0.0"
   },
   "scripts": {
     "test": "node_modules/mocha/bin/mocha test",
