--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "node-neat": "^1.7.2",
     "postcss-flexibility": "^1.1.0",
     "postcss-object-fit-images": "^1.1.2",
-    "promise-polyfill": "^6.0.2",
-    "shelljs": "^0.7.6"
+    "promise-polyfill": "^6.0.2"
   },
   "devDependencies": {
     "broccoli-test-helpers": "0.0.8",
