change include behaviour for css files add imagemin add favicons

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "broccoli-babel-transpiler": "~6.0.0-alpha.3",
     "broccoli-concat": "^3.1.1",
     "broccoli-funnel": "^1.1.0",
+    "broccoli-imagemin": "^1.0.1",
     "broccoli-lint-eslint": "^3.2.0",
     "broccoli-merge-trees": "^1.2.1",
     "broccoli-postcss": "^3.2.1",
@@ -18,6 +19,10 @@
     "broccoli-source": "^1.1.0",
     "broccoli-stew": "^1.4.0",
     "broccoli-uglify-sourcemap": "^1.5.1",
+    "imagemin-gifsicle": "^5.1.0",
+    "imagemin-jpegtran": "^5.0.2",
+    "imagemin-optipng": "^5.2.1",
+    "imagemin-svgo": "^5.2.0",
     "loader.js": "^4.1.0",
     "lodash.merge": "^4.6.0",
     "modernizr": "^3.3.1",
