--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "broccoli-source": "^1.1.0",
     "broccoli-stew": "^1.4.0",
     "broccoli-uglify-sourcemap": "^1.5.1",
+    "fs-temp": "^1.1.2",
     "imagemin-gifsicle": "^5.1.0",
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-optipng": "^5.2.1",
@@ -30,8 +31,7 @@
     "node-neat": "^1.7.2",
     "postcss-flexibility": "^1.1.0",
     "postcss-object-fit-images": "^1.1.2",
-    "promise-polyfill": "^6.0.2",
-    "quick-temp": "^0.1.8"
+    "promise-polyfill": "^6.0.2"
   },
   "devDependencies": {
     "broccoli-test-helpers": "0.0.8",
