--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "broccoli-lint-eslint": "^3.2.0",
     "broccoli-merge-trees": "^1.2.1",
     "broccoli-postcss": "^3.2.1",
-    "broccoli-sass": "^0.7.0",
+    "broccoli-sass-source-maps": "^2.0.0",
     "broccoli-source": "^1.1.0",
     "broccoli-stew": "^1.4.0",
     "broccoli-uglify-sourcemap": "^1.5.1",
