--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-es2015-modules-amd": "^6.4.3",
     "babel-plugin-transform-strict-mode": "^6.3.13",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-template": "^6.22.0",
     "broccoli-babel-transpiler": "~6.0.0-alpha.3",
@@ -30,8 +31,7 @@
     "node-bourbon": "^4.2.8",
     "node-neat": "^1.7.2",
     "postcss-flexibility": "^1.1.0",
-    "postcss-object-fit-images": "^1.1.2",
-    "promise-polyfill": "^6.0.2"
+    "postcss-object-fit-images": "^1.1.2"
   },
   "devDependencies": {
     "broccoli-test-helpers": "0.0.8",
