--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-template": "^6.22.0",
-    "broccoli-babel-transpiler": "~6.0.0-alpha.3",
+    "broccoli-babel-transpiler": "6.0.0-alpha.3",
     "broccoli-concat": "^3.1.1",
     "broccoli-funnel": "^1.1.0",
     "broccoli-imagemin": "^1.0.1",
