--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "broccoli-source": "^1.1.0",
     "broccoli-stew": "^1.4.0",
     "broccoli-uglify-sourcemap": "^1.5.1",
+    "cssnano": "^4.1.8",
     "fs-temp": "^1.1.2",
     "imagemin-gifsicle": "^5.1.0",
     "imagemin-jpegtran": "^5.0.2",
