--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "broccoli-stew": "^1.4.0",
     "broccoli-uglify-sourcemap": "^1.5.1",
     "cssnano": "^4.1.8",
+    "cssnano-preset-advanced": "^4.0.6",
     "fs-temp": "^1.1.2",
     "imagemin-gifsicle": "^5.1.0",
     "imagemin-jpegtran": "^5.0.2",
