--- a/package.json
+++ b/package.json
@@ -2,52 +2,54 @@
   "name": "genkgo-dtk",
   "main": "lib/dtk-app.js",
   "dependencies": {
-    "autoprefixer": "^9.4.4",
-    "babel-plugin-dynamic-import-amd": "^1.0.0",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-custom-element-classes": "^0.1.0",
-    "babel-plugin-transform-es2015-modules-amd": "^6.4.3",
-    "babel-plugin-transform-strict-mode": "^6.3.13",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-template": "^6.22.0",
-    "broccoli-babel-transpiler": "6.0.0-alpha.3",
-    "broccoli-concat": "^3.1.1",
-    "broccoli-funnel": "^1.1.0",
-    "broccoli-imagemin": "^1.0.1",
-    "broccoli-lint-eslint": "^3.2.0",
-    "broccoli-merge-trees": "^1.2.1",
-    "broccoli-postcss": "^4.0.0",
-    "broccoli-sass-simultaneous": "^2.0.0",
-    "broccoli-source": "^1.1.0",
-    "broccoli-stew": "^1.4.0",
-    "broccoli-uglify-sourcemap": "^2.2.0",
-    "cssnano": "^4.1.8",
-    "cssnano-preset-advanced": "^4.0.6",
+    "@babel/plugin-proposal-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-async-to-generator": "^7.8.3",
+    "@babel/plugin-transform-classes": "^7.8.3",
+    "@babel/plugin-transform-modules-amd": "^7.8.3",
+    "@babel/plugin-transform-strict-mode": "^7.8.3",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/template": "^7.8.3",
+    "autoprefixer": "^9.7.4",
+    "broccoli-babel-transpiler": "^7.4.0",
+    "broccoli-concat": "^4.2.2",
+    "broccoli-funnel": "^3.0.1",
+    "broccoli-imagemin": "^2.0.1",
+    "broccoli-lint-eslint": "^6.0.0",
+    "broccoli-merge-trees": "^4.1.0",
+    "broccoli-postcss": "^5.0.0",
+    "broccoli-sass-source-maps": "^4.0.0",
+    "broccoli-source": "^3.0.0",
+    "broccoli-stew": "^3.0.0",
+    "broccoli-uglify-sourcemap": "^3.2.0",
+    "cssnano": "^4.1.10",
+    "cssnano-preset-advanced": "^4.0.7",
+    "fibers": "^4.0.2",
     "fs-temp": "^1.1.2",
-    "imagemin-gifsicle": "^5.1.0",
-    "imagemin-jpegtran": "^5.0.2",
-    "imagemin-optipng": "^5.2.1",
-    "imagemin-svgo": "^5.2.0",
-    "loader.js": "^4.1.0",
-    "lodash.merge": "^4.6.0",
-    "modernizr": "^3.7.1",
-    "node-sass-package-importer": "^5.3.1",
-    "postcss-discard-unused": " ^4.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^6.0.0",
+    "imagemin-optipng": "^7.1.0",
+    "imagemin-svgo": "^7.0.0",
+    "loader.js": "^4.7.0",
+    "lodash.merge": "^4.6.2",
+    "modernizr": "^3.8.0",
+    "node-sass-package-importer": "^5.3.2",
+    "postcss-discard-unused": "^4.0.1",
     "postcss-flexibility": "^2.0.0",
-    "postcss-object-fit-images": "^1.1.2"
+    "postcss-object-fit-images": "^1.1.2",
+    "sass": "^1.25.0"
   },
   "devDependencies": {
-    "broccoli-test-helpers": "0.0.8",
-    "chai": "^3.5.0",
-    "mkdirp": "^0.5.1",
-    "mocha": "^3.0.2"
+    "broccoli-test-helper": "^2.0.0",
+    "chai": "^4.2.0",
+    "mkdirp": "^1.0.3",
+    "mocha": "^7.0.1"
   },
   "engines": {
     "node": ">=6.0.0"
   },
   "scripts": {
-    "test": "node_modules/mocha/bin/mocha test",
+    "test": "node_modules/mocha/bin/mocha --exit test",
     "test:debug": "node_modules/mocha/bin/mocha debug test",
     "preversion": "npm run test"
   },
