--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "modernizr": "^3.8.0",
     "node-sass": "^4.13.1",
     "node-sass-package-importer": "^5.3.2",
+    "postcss-aspect-ratio": "^1.0.2",
     "postcss-discard-unused": "^4.0.1",
     "postcss-flexibility": "^2.0.0",
     "postcss-object-fit-images": "^1.1.2"
