--- a/package.json
+++ b/package.json
@@ -34,11 +34,9 @@
     "loader.js": "^4.7.0",
     "lodash.merge": "^4.6.2",
     "modernizr": "^3.8.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^7.0.1",
     "node-sass-package-importer": "^5.3.2",
-    "postcss-discard-unused": "^4.0.1",
-    "postcss-flexibility": "^2.0.0",
-    "postcss-object-fit-images": "^1.1.2"
+    "postcss-discard-unused": "^4.0.1"
   },
   "devDependencies": {
     "broccoli-test-helper": "^2.0.0",
