--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "genkgo-dtk",
   "main": "lib/dtk-app.js",
   "dependencies": {
-    "@babel/plugin-proposal-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-async-to-generator": "^7.8.3",
-    "@babel/plugin-transform-classes": "^7.8.3",
-    "@babel/plugin-transform-modules-amd": "^7.8.3",
-    "@babel/plugin-transform-strict-mode": "^7.8.3",
-    "@babel/polyfill": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/template": "^7.8.3",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/plugin-proposal-dynamic-import": "^7.16.7",
+    "@babel/plugin-transform-async-to-generator": "^7.16.7",
+    "@babel/plugin-transform-classes": "^7.16.7",
+    "@babel/plugin-transform-modules-amd": "^7.16.7",
+    "@babel/plugin-transform-strict-mode": "^7.16.7",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.16.7",
+    "@babel/template": "^7.16.7",
     "autoprefixer": "^9.7.4",
-    "babel-eslint": "^10.0.3",
     "broccoli-babel-transpiler": "^7.8.0",
     "broccoli-concat": "^4.2.2",
     "broccoli-funnel": "^3.0.1",
