--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "mocha": "^7.0.1"
   },
   "engines": {
-    "node": ">=12.19.0"
+    "node": "^16.14.0"
   },
   "scripts": {
     "test": "node_modules/mocha/bin/mocha --exit test",
