--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "broccoli-uglify-sourcemap": "^4.0.0",
     "cssnano": "^4.1.11",
     "cssnano-preset-advanced": "^4.0.8",
+    "dart-sass": "^1.25.0",
     "fs-temp": "^1.1.2",
     "imagemin-gifsicle": "^7.0.0",
     "imagemin-jpegtran": "^7.0.0",
@@ -33,7 +34,6 @@
     "loader.js": "^4.7.0",
     "lodash.merge": "^4.6.2",
     "modernizr": "^3.11.8",
-    "node-sass": "^7.0.1",
     "node-sass-package-importer": "^5.3.2",
     "postcss-discard-unused": "^4.0.1"
   },
