--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "loader.js": "^4.7.0",
     "lodash.merge": "^4.6.2",
     "modernizr": "^3.11.8",
-    "node-sass": "^7.0.1",
+    "node-sass": "^7.0.1 || ^8.0",
     "node-sass-package-importer": "^5.3.2",
     "postcss-discard-unused": "^4.0.1"
   },
@@ -44,7 +44,7 @@
     "mocha": "^7.0.1"
   },
   "engines": {
-    "node": "^16.14.0"
+    "node": "^16.14.0 || ^18.13.0"
   },
   "scripts": {
     "test": "node_modules/mocha/bin/mocha --exit test",
