--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "genkgo-dtk",
   "main": "lib/dtk-app.js",
+  "bin": {
+    "g2dtk": "bin/g2dtk"
+  },
   "dependencies": {
     "@babel/eslint-parser": "^7.5.4",
     "@babel/plugin-transform-dynamic-import": "^7.18.6",
@@ -35,7 +38,17 @@
     "modernizr": "^3.11.8",
     "node-sass": "^7.0.1 || ^8.0",
     "node-sass-package-importer": "^5.3.2",
-    "postcss-discard-unused": "^4.0.1"
+    "postcss-discard-unused": "^4.0.1",
+    "broccoli-node-info": "1.1.0",
+    "commander": "^2.5.0",
+    "copy-dereference": "^1.0.0",
+    "heimdalljs-logger": "^0.1.7",
+    "rimraf": "^2.4.3",
+    "sane": "^4.1.0",
+    "shelljs": "^0.8.4",
+    "tiny-lr": "^1.0.3",
+    "tmp": "0.0.28",
+    "underscore.string": "^3.2.2"
   },
   "devDependencies": {
     "broccoli-test-helper": "^2.0.0",
