--- a/package.json
+++ b/package.json
@@ -48,7 +48,11 @@
     "shelljs": "^0.8.4",
     "tiny-lr": "^1.0.3",
     "tmp": "0.0.28",
-    "underscore.string": "^3.2.2"
+    "underscore.string": "^3.2.2",
+    "broccoli-slow-trees": "^2.0.0",
+    "findup-sync": "^3.0",
+    "fs-extra": "^7.0.1",
+    "rsvp": "^4.8"
   },
   "devDependencies": {
     "broccoli-test-helper": "^2.0.0",
