--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "sharp": "^0.33.1",
     "svgo": "^3.2.0",
     "vite": "^5.0.2",
-    "vite-plugin-image-optimizer": "^1.1.7"
+    "vite-plugin-image-optimizer": "^1.1.7",
+    "vite-plugin-static-copy": "^3.1.2"
   },
   "bin": {
     "g2dtk": "bin/g2dtk"
